# fastapi-rbac-sample

./: .gitignore  README.md  main.py  pyproject.toml
app/: auth.py  database.py  models.py  permissions.py  roles.py  schemas.py
app/crud/: items.py  users.py
app/permissions/: base.py  models_permissions.py  roles.py
app/routers/: items.py  users.py
