[tool.poetry]
name = "fastapi-rbac-sample"
version = "0.1.0"
description = ""
authors = ["perforb <dev.perfumed.garden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.24"
PyJWT = "^2.8.0"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.0.post1"
bcrypt = "^4.1.2"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
